--- a/teapoio/pubspec.yaml
+++ b/teapoio/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
   device_preview: ^1.3.1
   get_it: ^8.2.0
 
+  http: ^1.2.0
+
+  firebase_core: ^3.15.2
+  firebase_auth: ^5.7.0
+  cloud_firestore: ^5.6.12
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
